# agent

./: .gitignore  ARCH.md  CLAUDE.md  PLAN.md  README.md  claude_mcp_config.json  init_db.py  launch.sh  panel.py  pyproject.toml  server.py
agent_comms_mcp/: init_db.py  panel.py  schema.py  server.py
tests/: conftest.py  test_panel_queries.py  test_server.py
