[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-comms-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
agent-comms-server  = "agent_comms_mcp.server:main"
agent-comms-panel   = "agent_comms_mcp.panel:main"
agent-comms-init-db = "agent_comms_mcp.init_db:init_db"

[tool.hatch.build.targets.wheel]
packages = ["agent_comms_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
